--- a/geonode/layers/templates/layers/layer_detail.html
+++ b/geonode/layers/templates/layers/layer_detail.html
@@ -70,8 +70,8 @@
                 {% for attribute in resource.attributes %}
                   <tr>
                     <td {% if attribute.attribute_label and attribute.attribute_label != attribute.attribute %}title="{{ attribute.attribute }}"{% endif %}>{{ attribute }}</td>
-                    <td>{{ attribute.attribute_label }}</td>
-                    <td>{{ attribute.description }}</td>
+                    <td>{{ attribute.attribute_label|default:"" }}</td>
+                    <td>{{ attribute.description|default:"" }}</td>
                     {% if wps_enabled %}
                       {% if attribute.unique_values == "NA" %}
                       <td>{{ attribute.unique_values }}</td>
