--- a/geonode/maptiles/templates/maptiles/maptiles_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_map.html
@@ -7,7 +7,7 @@
 {% load base_tags %}
 {% load guardian_tags %}
 
-{% block title %}Map Tiles Selection — {{ block.super }}{% endblock %}
+{% block title %}Data Tiles Selection — {{ block.super }}{% endblock %}
 
 {% block head %}
 <style>
@@ -45,7 +45,7 @@
 
 </div>
 <div class="page-header">
-  <h2 class="page-title">Map Tiles</h2>
+  <h2 class="page-title">Data Tiles</h2>
 </div>
 <div class="row">
     <div class="col-md-9">
@@ -55,6 +55,31 @@
     </div>
     <div class="col-md-3">
         <ul class="list-group">
+          <li class="list-group-item">
+              <h4 class="list-group-item-heading">{%trans "Download Data Class(es)" %}</h4>
+              <form name="georef_form" id="georef_form" action="/maptiles/addtocart/" method="POST" >
+                  {% csrf_token %}
+                <!-- <div class="col-md-4" align="left">-->
+                     <nobr>
+                         <ul>
+                              {% for class in data_classes %}
+                                {% if class != 'Unknown Type' %}
+                                   <li>
+                                     <input id="{{ class | slugify }}" name="{{ class | slugify }}" type="checkbox" />
+                                     <label class="label-dataclass" for="{{ class | slugify }}">{{ class }}</label>
+                                   </li>
+                                {% endif %}
+                              {% endfor %}
+
+                         </ul>
+                     </nobr>
+
+                     <br/>
+                  <input type="text" id="georef_area" name="georef_area" style="display:none" />
+                  <input type="submit" id="georef_submit" name="georef_submit" value="Submit" class="btn btn-default" />
+                <!--</div> -->
+             </form>
+          </li>
 	         <li class="list-group-item">
 		           <h4 class="list-group-item-heading">{%trans "Legend" %}</h4>
 		             <img id="legend_icon" src="{{ grid.resource.get_legend.url }}"><br/>
@@ -79,52 +104,7 @@
  </div>
  <div class="row" id="point_display">
 
- </div>
- <hr>
- <h3 class="page-title">Select Data Class(es) to Download</h3>
- <form name="georef_form" id="georef_form" action="/maptiles/addtocart/" method="POST" >
-     {% csrf_token %}
-    <div class="col-md-4" align="left">
-        <nobr>
-            <ul class="list-inline pull-left">
-                 {% for class in data_classes %}
-                   {% if class != 'Unknown Type' %}
-                      <li>
-                        <input id="{{ class | slugify }}" name="{{ class | slugify }}" type="checkbox" />
-                        <label class="label-dataclass" for="{{ class | slugify }}">{{ class }}</label>
-                      </li>
-                   {% endif %}
-                 {% endfor %}
 
-            </ul>
-        </nobr>
-
-        <!-- SRS Selection commented out
-        <nobr>
-        <label class="label-dataclass">SRS</label>
-        <select>
-            {% for proj in projections %}
-                {% if proj == 'UTM 51 (Default)' %}
-                    <option  id="{{ proj | slugify }}"
-                             name="{{ proj | slugify }}"
-                             value="{{ proj | slugify }}">
-                {% else %}
-                    <option  id="{{ proj | slugify }}"
-                             name="{{ proj | slugify }}"
-                             value="{{ proj | slugify }}"
-                             selected="selected">
-                {% endif %}
-                    {{ proj }}
-                  </option>
-             {% endfor %}
-        </select>
-        </nobr>
-        -->
-        <br/>
-     <input type="text" id="georef_area" name="georef_area" style="display:none" />
-     <input type="submit" id="georef_submit" name="georef_submit" value="Submit" class="btn btn-default" />
-    </div>
-</form>
 
 {% endblock %}
 {% endblock %}
