--- a/geonode/templates/base.html
+++ b/geonode/templates/base.html
@@ -108,7 +108,7 @@
             {% if not user.is_authenticated  %}
             <li><a href="{% url 'datarequests:registration_part_one' %}">{% trans "Register" %}</a></li>
             {% elif not user.is_superuser %}
-            <li><a href="{% url 'datarequests:registration_part_one' %}">{% trans "Request Data" %}</a></li>
+            <li><a href="{% url 'datarequests:registration_part_one' %}">{% trans "Request New Data" %}</a></li>
             {% endif %}
             {% if user.is_authenticated %}
             <li>
