updated models and form displays for data requests, updated details displayed for data request profile

--- a/geonode/datarequests/templates/datarequests/profile_detail.html
+++ b/geonode/datarequests/templates/datarequests/profile_detail.html
@@ -51,9 +51,6 @@
         <td>{{ request_profile.ftp_folder }} </td>
      </tr>
       <tr>
-      <td class="table-user-profile-attribute col-md-3">{% trans "Requester Type" %}</td>
-      <td>{{ request_profile.get_requester_type_display }}</td>
-      </tr>
 
       <tr>
       <td class="table-user-profile-attribute">{% trans "Organization" %}</td>
@@ -84,17 +81,7 @@
       <td class="table-user-profile-attribute">{% trans "Type of Data Requested" %}</td>
       <td>{{ request_profile.get_data_type_requested_display }}</td>
       </tr>
-
-      <tr>
-      <td class="table-user-profile-attribute">{% trans "License Period" %}</td>
-      <td>{{ request_profile.license_period }}</td>
-      </tr>
-
-      <tr>
-      <td class="table-user-profile-attribute">{% trans "Subscription/Maintenance?" %}</td>
-      <td>{{ has_subscription|yesno:"yes,no" }}</td>
-      </tr>
-
+      
       <tr>
       <td class="table-user-profile-attribute">{% trans "Purpose/Intended Use of Data" %}</td>
       <td>{{ request_profile.purpose }}</td>
@@ -104,16 +91,13 @@
       <td class="table-user-profile-attribute">{% trans "Intended Use of Dataset" %}</td>
       <td>{{ request_profile.get_intended_use_of_dataset_display }}</td>
       </tr>
-       <tr>
-          <td class="table-user-profile-attribute col-md-3">{% trans "Approval/Rejection Administrator" %}</td>
-          <td>{{request_profile.administrator.username}}</td>
-      </tr>
-      {% if request_profile.requester_type == 'noncommercial' or request_profile.requester_type == 'academe' %}
+
+      {% if request_profile.intended_use_of_dataset == 'noncommercial' or request_profile.intended_use_of_dataset == 'academe' %}
         <tr>
         <td class="table-user-profile-attribute">{% trans "Organization type based on Phil-LiDAR1 Data Distribution Policy" %}</td>
         <td>{{ request_profile.get_organization_type_display }}</td>
         </tr>
-        {% if request_profile.requester_type == 'academe' %}
+        {% if request_profile.intended_use_of_dataset == 'academe' %}
           <tr>
           <td class="table-user-profile-attribute">{% trans "Level of Request" %}</td>
           <td>{{ request_profile.get_request_level_display }}</td>
@@ -129,6 +113,10 @@
           </tr>
         {% endif %}
       {% endif %}
+         <tr>
+          <td class="table-user-profile-attribute col-md-3">{% trans "Approval/Rejection Administrator" %}</td>
+          <td>{{request_profile.administrator.username}}</td>
+      </tr>
       </tbody>
     </table>
 
