--- a/src/geonode-client/app/static/externals/ext/resources/css/xtheme-white.css
+++ b/src/geonode-client/app/static/externals/ext/resources/css/xtheme-white.css
@@ -1664,6 +1664,7 @@ body.x-body-masked .x-window-plain .x-window-mc {
 }
 .x-slider-horz, .x-slider-horz .x-slider-end, .x-slider-horz .x-slider-inner {
     background-image:url(../images/white/slider/slider-bg-flat.png);
+    margin-bottom: 10px;
 }
 
 .x-slider-horz .x-slider-thumb {
