Added French user guide

--- a/geonode/templates/page_layout.html
+++ b/geonode/templates/page_layout.html
@@ -97,6 +97,7 @@
           <option value="" disabled selected>Help</option>
           <option value='{{ STATIC_URL }}docs/WorldMap_Help_en.pdf'>English</option>
           <option value='{{ STATIC_URL }}docs/WorldMap_Help_zh-cn.pdf'>Chinese</option>
+          <option value='{{ STATIC_URL }}docs/WorldMap_Help_fr.pdf'>French</option>
           <option value='{{ STATIC_URL }}docs/WorldMap_Help_it.pdf'>Italian</option>
         </select>
 
